k8s/eks/listener.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: listener
  namespace: maia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: listener
  template:
    metadata:
      labels:
        app: listener
    spec:
      containers:
        - name: listener
          image: 360879159958.dkr.ecr.us-east-1.amazonaws.com/maia-dev-ecr:backend-dev
          command: ["python", "scripts/kafka_mongo_listener.py"]
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
