k8s/eks/swap-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-swap-enabler
  namespace: kube-system
  labels:
    app: node-swap-enabler
spec:
  selector:
    matchLabels:
      app: node-swap-enabler
  template:
    metadata:
      labels:
        app: node-swap-enabler
    spec:
      hostPID: true
      hostIPC: true
      tolerations:
        - operator: Exists
      containers:
        - name: pause
          image: public.ecr.aws/eks-distro/kubernetes/pause:3.9
          resources:
            requests:
              cpu: 1m
              memory: 5Mi
            limits:
              cpu: 5m
              memory: 10Mi
      volumes:
        - name: host-root
          hostPath:
            path: /
