k8s/eks/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: maia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 847964925141.dkr.ecr.us-east-1.amazonaws.com/maia-dev-ecr:backend-dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 8000
            initialDelaySeconds: 40
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: maia
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 8000
      targetPort: 8000
